# Education_adviser_agent

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  agent.py  database.py  docker-compose.yml  main.py  main_backup.py  main_broken_imports.py  main_wrong_jwt.py  pyproject.toml  requirements.txt  schema.sql  voice_agent.db  worker.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  LiveKitIntegration.js  index.css
